--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.5.0",
     "moment": "^2.29.1",
+    "ng2-search-filter": "^0.5.1",
     "ngx-markdown": "^12.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
